# pixflicker

./: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
assets/: index-Csww4qol.css  index-eqc2-Dzw.js  pixflicker_bg-BJlQ8e-C.wasm
src/: App.vue  lib.rs
src/components/: HelloWorld.vue  PixFlicker.vue
